tests/negative/test_attrs_type_single.orb
fnc main () () {
    attr?? \()::type foo;
};